--- a/.github/workflows/cache-env-combined-1.yml
+++ b/.github/workflows/cache-env-combined-1.yml
@@ -33,7 +33,7 @@ jobs:
       - uses: actions/cache@v2
         id: combined-cache
         env:
-          CACHE_NUMBER: 0
+          CACHE_NUMBER: 1
         with:
           path: |
             /usr/share/miniconda3/envs/saltproc-env
@@ -53,6 +53,8 @@ jobs:
           activate-environment: saltproc-env
           use-mamba: true
           use-only-tar-bz2: true
+        run: |
+          conda config --env --set pip_interop_enabled True
 
 
 # Install dependencies
