--- a/.github/workflows/cache-env-conda-1.yml
+++ b/.github/workflows/cache-env-conda-1.yml
@@ -37,6 +37,8 @@ jobs:
           activate-environment: saltproc-env
           use-mamba: true
           use-only-tar-bz2: true
+      - run: |
+          conda config --env --set pip_interop_enabled True
 
 
 # Install dependencies
