--- a/.github/workflows/cache-env-conda-2.yml
+++ b/.github/workflows/cache-env-conda-2.yml
@@ -48,7 +48,7 @@ jobs:
           activate-environment: saltproc-env
           use-mamba: true
           use-only-tar-bz2: true
-        run: |
+      - run: |
           conda config --env --set pip_interop_enabled True
 # Install dependencies
       - name: Install dependencies and SaltProc
