add python setup

--- a/.github/workflows/test-saltproc-conda-1.yml
+++ b/.github/workflows/test-saltproc-conda-1.yml
@@ -33,6 +33,12 @@ jobs:
 # Set up python
       - uses: actions/checkout@v2
 
+      - name: Set up Python 3.8
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.8
+
+
       - name: Set up Mambaforge
         uses: conda-incubator/setup-miniconda@v2
         with:
