--- a/.github/workflows/test-saltproc-conda-1.yml
+++ b/.github/workflows/test-saltproc-conda-1.yml
@@ -46,13 +46,13 @@ jobs:
           miniforge-version: latest
           activate-environment: saltproc-env
           use-mamba: true
-          use-only-tar-bz2: true
+          #use-only-tar-bz2: true
       - run: |
           conda config --env --set pip_interop_enabled True
 # Install dependencies
       - name: Install dependencies and SaltProc
         if: steps.conda-cache.outputs.cache-hit != 'true'
-        run: mamba install -c conda-forge --file conda-dependencies.txt
+        run: mamba env update -n saltproc-env -f environment.txt
 
       - name: Build saltproc
         run: |
