--- a/.github/workflows/test-saltproc-conda-1.yml
+++ b/.github/workflows/test-saltproc-conda-1.yml
@@ -23,7 +23,7 @@ jobs:
       - uses: actions/cache@v2
         id: conda-cache
         env:
-          CACHE_NUMBER: 1
+          CACHE_NUMBER: 2
         with:
           path: /usr/share/miniconda3/envs/saltproc-env
           key: ${{ runner.os }}-conda1-$${ hashFiles('conda-dependencies.yml')-${{ env.DATE }}-${{ env.CACHE_NUMBER }} }
@@ -52,7 +52,7 @@ jobs:
 # Install dependencies
       - name: Install dependencies and SaltProc
         if: steps.conda-cache.outputs.cache-hit != 'true'
-        run: mamba env update -n saltproc-env -f environment.txt
+        run: mamba env update -n saltproc-env -f environment.yml
 
       - name: Build saltproc
         run: |
@@ -60,4 +60,6 @@ jobs:
           python setup.py install
 
       - name: Test saltproc
-        run: pytest --ignore saltproc/tests/integration_tests saltproc
+        run: |
+          conda activate saltproc-env
+          pytest --ignore saltproc/tests/integration_tests saltproc
