--- a/.github/workflows/cache-env-combined-1.yml
+++ b/.github/workflows/cache-env-combined-1.yml
@@ -18,17 +18,6 @@ jobs:
 # Setup pip
       - uses: actions/checkout@v2
 
-      - name: Set up Python 3.8
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.8
-
-# pip cache 
-      - name: Find pip cache location
-        id: pip-cache
-        run: |
-          echo "::set-output name=dir ::$(pip cache dir)"
-
 # Check for existing cache
       - name: Set cache date
         run: echo "DATE=$(date +'%Y%m%d')" >> $GITHUB_ENV
@@ -40,7 +29,7 @@ jobs:
         with:
           path: |
             /usr/share/miniconda3/envs/saltproc-env
-            ${{ steps.pip-cache.outputs.dir }}
+            ~/.cache/pip
           key: ${{ runner.os }}-combined1-$${ hashFiles('conda-dependencies.txt')-${{ env.DATE }}-${{ env.CACHE_NUMBER }} }
           restore-keys: |
             ${{ runner.os }}-combined1-
@@ -62,6 +51,12 @@ jobs:
       - name: Update environment
         if: steps.combined-cache.outputs.cache-hit != 'true'
         run: mamba env update -n saltproc-env -f environment.yml
+
+      - name: Set up Python 3.8
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.8
+
 
       - name: Install SaltProc
         run: |
