--- a/.github/workflows/test-saltproc-conda-1.yml
+++ b/.github/workflows/test-saltproc-conda-1.yml
@@ -16,6 +16,8 @@ jobs:
         shell: bash -l {0}
 
     steps:
+      - uses: actions/checkout@v2
+        
 # Check for existing cache
       - name: Set cache date
         run: echo "DATE=$(date +'%Y%m%d')" >> $GITHUB_ENV
@@ -30,29 +32,28 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-conda1-
 
-# Set up python
-      - uses: actions/checkout@v2
-
-      - name: Set up Python 3.8
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.8
-
-
-      - name: Set up Mambaforge
+# Set up conda
+      - name: Set up conda
         uses: conda-incubator/setup-miniconda@v2
         with:
           miniforge-variant: Mambaforge
           miniforge-version: latest
           activate-environment: saltproc-env
           use-mamba: true
-          #use-only-tar-bz2: true
+          use-only-tar-bz2: true
       - run: |
           conda config --env --set pip_interop_enabled True
+
 # Install dependencies
-      - name: Install dependencies and SaltProc
+      - name: Update environment
         if: steps.conda-cache.outputs.cache-hit != 'true'
         run: mamba env update -n saltproc-env -f environment.yml
+
+      - name: Set up Python 3.8
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.8
+
 
       - name: Build saltproc
         run: |
