--- a/.github/workflows/cache-env-combined-1.yml
+++ b/.github/workflows/cache-env-combined-1.yml
@@ -31,14 +31,12 @@ jobs:
       - uses: actions/cache@v2
         id: combined-cache
         env:
-          CACHE_NUMBER: 1
+          CACHE_NUMBER: 0
         with:
           path: |
             /usr/share/miniconda3/envs/saltproc-env
             ~/.cache/pip
-          key: ${{ runner.os }}-combined1-$${ hashFiles('conda-dependencies.txt')-${{ env.DATE }}-${{ env.CACHE_NUMBER }} }
-          restore-keys: |
-            ${{ runner.os }}-combined1-
+          key: ${{ runner.os }}-combined1-$${ hashFiles('environment.yml')-${{ env.DATE }}-${{ env.CACHE_NUMBER }} }
 
 # Setup conda 
       - name: Set up conda
