--- a/.github/workflows/cache-env-combined-1.yml
+++ b/.github/workflows/cache-env-combined-1.yml
@@ -31,7 +31,7 @@ jobs:
       - uses: actions/cache@v2
         id: combined-cache
         env:
-          CACHE_NUMBER: 1
+          CACHE_NUMBER: 0
         with:
           path: |
             /usr/share/miniconda3/envs/saltproc-env
@@ -46,7 +46,7 @@ jobs:
           miniforge-version: latest
           activate-environment: saltproc-env
           use-mamba: true
-          #use-only-tar-bz2: true
+          use-only-tar-bz2: true
       - run: |
           conda config --env --set pip_interop_enabled True
 
