--- a/.github/workflows/cache-env-combined-1.yml
+++ b/.github/workflows/cache-env-combined-1.yml
@@ -31,10 +31,11 @@ jobs:
       - uses: actions/cache@v2
         id: combined-cache
         env:
-          CACHE_NUMBER: 0
+          CACHE_NUMBER: 3
         with:
           path: |
             /usr/share/miniconda3/envs/saltproc-env
+            ~/conda_pkgs_dir
             ~/.cache/pip
           key: ${{ runner.os }}-combined1-$${ hashFiles('environment.yml')-${{ env.DATE }}-${{ env.CACHE_NUMBER }} }
 
@@ -53,7 +54,7 @@ jobs:
 # Install dependencies
       - name: Update environment
         run: mamba env update -n saltproc-env -f environment.yml
-        #if: steps.combined-cache.outputs.cache-hit != 'true'
+        if: steps.combined-cache.outputs.cache-hit != 'true'
 
       - name: Check packages
         run: mamba list
