--- a/.github/workflows/cache-env-combined-1.yml
+++ b/.github/workflows/cache-env-combined-1.yml
@@ -57,7 +57,7 @@ jobs:
         if: steps.combined-cache.outputs.cache-hit != 'true'
 
       - name: Check packages
-        run: mamba list
+        run: conda list
 
       - name: Install SaltProc
         run: |
