--- a/.github/workflows/cache-env-combined-1.yml
+++ b/.github/workflows/cache-env-combined-1.yml
@@ -31,12 +31,12 @@ jobs:
       - uses: actions/cache@v2
         id: combined-cache
         env:
-          CACHE_NUMBER: 3
+          CACHE_NUMBER: 4
         with:
           path: |
             /usr/share/miniconda3/envs/saltproc-env
-            ~/conda_pkgs_dir
-            ~/.cache/pip
+            #  ~/conda_pkgs_dir
+            # ~/.cache/pip
           key: ${{ runner.os }}-combined1-$${ hashFiles('environment.yml')-${{ env.DATE }}-${{ env.CACHE_NUMBER }} }
 
 # Setup conda 
@@ -47,19 +47,19 @@ jobs:
           miniforge-version: latest
           activate-environment: saltproc-env
           use-mamba: true
-          use-only-tar-bz2: true
+            # use-only-tar-bz2: true
       - run: |
           conda config --env --set pip_interop_enabled True
 
 # Install dependencies
       - name: Update environment
         run: mamba env update -n saltproc-env -f environment.yml
-          #if: steps.combined-cache.outputs.cache-hit != 'true'
+        if: steps.combined-cache.outputs.cache-hit != 'true'
 
       - name: Check packages
         run: conda list
 
-      - name: Install SaltProc
-        run: |
-          conda activate saltproc-env
-          python setup.py install
+          # - name: Install SaltProc
+          # run: |
+          #  conda activate saltproc-env
+          #  python setup.py install
