--- a/.github/workflows/cache-env-combined-1.yml
+++ b/.github/workflows/cache-env-combined-1.yml
@@ -18,10 +18,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-        #- name: Set up Python 3.8
-        # uses: actions/setup-python@v2
-        #with:
-        #  python-version: 3.8
+      - name: Set up Python 3.8
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.8
 
 
 # Check for existing cache
@@ -31,7 +31,7 @@ jobs:
       - uses: actions/cache@v2
         id: combined-cache
         env:
-          CACHE_NUMBER: 5
+          CACHE_NUMBER: 4
         with:
           path: |
             /usr/share/miniconda3/envs/saltproc-env
