--- a/.github/workflows/cache-env-combined-1.yml
+++ b/.github/workflows/cache-env-combined-1.yml
@@ -11,9 +11,9 @@ on:
 jobs:
   cache-dependencies-combined:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        shell: bash -l {0}
+      #defaults:
+      #run:
+      #  shell: bash -l {0}
 
     steps:
       - uses: actions/checkout@v2
@@ -24,21 +24,6 @@ jobs:
         #  python-version: 3.8
 
 
-# Check for existing cache
-      - name: Set cache date
-        run: echo "DATE=$(date +'%Y%m%d')" >> $GITHUB_ENV
-
-      - uses: actions/cache@v2
-        id: combined-cache
-        env:
-          CACHE_NUMBER: 5
-        with:
-          path: |
-            /usr/share/miniconda3/envs/saltproc-env
-            #  ~/conda_pkgs_dir
-            # ~/.cache/pip
-          key: ${{ runner.os }}-combined1-$${ hashFiles('environment.yml')-${{ env.DATE }}-${{ env.CACHE_NUMBER }} }
-
 # Setup conda 
       - name: Set up conda
         uses: conda-incubator/setup-miniconda@v2
@@ -48,8 +33,24 @@ jobs:
           activate-environment: saltproc-env
           use-mamba: true
             # use-only-tar-bz2: true
-      - run: |
-          conda config --env --set pip_interop_enabled True
+            #      - run: |
+            # conda config --env --set pip_interop_enabled True
+
+# check for existing cache
+      - name: Set cache date
+        run: echo "DATE=$(date +'%Y%m%d')" >> $GITHUB_ENV
+
+      - uses: actions/cache@v2
+        id: combined-cache
+        env:
+          CACHE_NUMBER: 6
+        with:
+          path: |
+            /usr/share/miniconda3/envs/saltproc-env
+            #  ~/conda_pkgs_dir
+            # ~/.cache/pip
+          key: ${{ runner.os }}-combined1-$${ hashFiles('environment.yml')-${{ env.DATE }}-${{ env.CACHE_NUMBER }} }
+
 
 # Install dependencies
       - name: Update environment
