--- a/.github/workflows/cache-env-combined-1.yml
+++ b/.github/workflows/cache-env-combined-1.yml
@@ -33,8 +33,8 @@ jobs:
           activate-environment: saltproc-env
           use-mamba: true
             # use-only-tar-bz2: true
-            #      - run: |
-            # conda config --env --set pip_interop_enabled True
+      - run: |
+          conda config --env --set pip_interop_enabled True
 
 # check for existing cache
       - name: Set cache date
@@ -59,7 +59,6 @@ jobs:
       - name: Check packages
         run: conda list
 
-          # - name: Install SaltProc
-          # run: |
-          #  conda activate saltproc-env
-          #  python setup.py install
+      - name: Install SaltProc
+        run: |
+          python setup.py install
