--- a/.github/workflows/cache-env-combined-1.yml
+++ b/.github/workflows/cache-env-combined-1.yml
@@ -11,18 +11,17 @@ on:
 jobs:
   cache-dependencies-combined:
     runs-on: ubuntu-latest
-      #defaults:
-      #run:
-      #  shell: bash -l {0}
+    defaults:
+      run:
+        shell: bash -l {0}
 
     steps:
       - uses: actions/checkout@v2
 
-        #- name: Set up Python 3.8
-        # uses: actions/setup-python@v2
-        #with:
-        #  python-version: 3.8
-
+      - name: Set up Python 3.8
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.8
 
 # Setup conda 
       - name: Set up conda
@@ -36,21 +35,6 @@ jobs:
       - run: |
           conda config --env --set pip_interop_enabled True
 
-# check for existing cache
-      - name: Set cache date
-        run: echo "DATE=$(date +'%Y%m%d')" >> $GITHUB_ENV
-
-      - uses: actions/cache@v2
-        id: combined-cache
-        env:
-          CACHE_NUMBER: 6
-        with:
-          path: /usr/share/miniconda3/envs/saltproc-env
-            #  ~/conda_pkgs_dir
-            # ~/.cache/pip
-          key: ${{ runner.os }}-combined1-$${ hashFiles('environment.yml')-${{ env.DATE }}-${{ env.CACHE_NUMBER }} }
-
-
 # Install dependencies
       - name: Update environment
         run: mamba env update -n saltproc-env -f environment.yml
@@ -62,3 +46,19 @@ jobs:
       - name: Install SaltProc
         run: |
           python setup.py install
+
+# check for existing cache
+      - name: Set cache date
+        run: echo "DATE=$(date +'%Y%m%d')" >> $GITHUB_ENV
+
+      - uses: actions/cache@v2
+        id: combined-cache
+        env:
+          CACHE_NUMBER: 7
+        with:
+          path: |
+            /usr/share/miniconda3/envs/saltproc-env
+            ~/.cache/pip
+          key: ${{ runner.os }}-combined1-$${ hashFiles('environment.yml')-${{ env.DATE }}-${{ env.CACHE_NUMBER }} }
+
+
