--- a/.github/workflows/cache-env-combined-8.yml
+++ b/.github/workflows/cache-env-combined-8.yml
@@ -29,7 +29,7 @@ jobs:
           miniforge-version: latest
           activate-environment: saltproc-env
           use-mamba: true
-            # use-only-tar-bz2: true
+          use-only-tar-bz2: true
       - run: |
           conda config --env --set pip_interop_enabled True
 
