--- a/.github/workflows/cache-dependencies.yml
+++ b/.github/workflows/cache-dependencies.yml
@@ -1,5 +1,5 @@
 # Preamble
-name: Cache dependencies (combined-7)
+name: Cache dependencies (combined-8)
 
 on:
   push:
@@ -9,10 +9,10 @@ on:
   #    - cron: '0 9 * * 1' # run every monday @ 9AM
 
 env:
-  CACHE_NUMBER: 8
+  CACHE_NUMBER: 0 
 
 jobs:
-  cache-dependencies-combined:
+  cache-dependencies:
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -29,33 +29,26 @@ jobs:
           miniforge-version: latest
           activate-environment: saltproc-env
           use-mamba: true
-            #use-only-tar-bz2: true
+          use-only-tar-bz2: true
       - run: |
           conda config --env --set pip_interop_enabled True
-
 
 # check for existing cache
       - name: Set cache date
         run: echo "DATE=$(date +'%Y%m%d')" >> $GITHUB_ENV
 
       - uses: actions/cache@v2
-        id: combined-cache
+        id: dependencies-cache
         with:
           path: |
             /usr/share/miniconda3/envs/saltproc-env
             ~/.cache/pip
-          key: ${{ runner.os }}-combined1-$${ hashFiles('environment.yml')-${{ env.DATE }}-${{ env.CACHE_NUMBER }} }
+          key: ${{ runner.os }}-depcache-$${ hashFiles('environment.yml')-${{ env.DATE }}-${{ env.CACHE_NUMBER }} }
 
 # Install dependencies
       - name: Update environment
         run: mamba env update -n saltproc-env -f environment.yml
-        if: steps.combined-cache.outputs.cache-hit != 'true'
-
-
-      - name: Set up Python 3.8
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.8
+        if: steps.dependencies-cache.outputs.cache-hit != 'true'
 
       - name: Install SaltProc
         run: |
