try making cache-dependencies a reusable workflow

--- a/.github/workflows/cache-dependencies.yml
+++ b/.github/workflows/cache-dependencies.yml
@@ -2,6 +2,7 @@
 name: Cache dependencies
 
 on:
+  workflow_call: # make this workflow reusable
   schedule:
     - cron: '0 9 * * 1' # run every monday @ 9AM
 
