--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -18,8 +18,8 @@ env:
 
 jobs:
   call-cache-dependencies:
-    uses: yardasol/saltproc/.github/workflows/cache-dependencies.yml
-    #uses: arfc/saltproc/.github/workflows/cache-dependencies.yml
+    uses: yardasol/saltproc/.github/workflows/cache-dependencies.yml@ci-testing
+    #uses: arfc/saltproc/.github/workflows/cache-dependencies.yml@master
     
   deploy-docs:
     runs-on: ubuntu-latest
