--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -7,20 +7,16 @@ on:
       - ci-testing
      # - master 
   #workflow_run:
-    #workflows: "Test SaltProc"
-    #branches: [master]
-    #types:
-    #  - completed
+  #workflows: "Test SaltProc"
+  #branches: [master]
+  #types:
+  #  - completed
 
 
 env:
   CACHE_NUMBER: 0 #change to manually reset cache
 
 jobs:
-  call-cache-dependencies:
-    uses: yardasol/saltproc/.github/workflows/cache-dependencies.yml@ci-testing
-    #uses: arfc/saltproc/.github/workflows/cache-dependencies.yml@master
-    
   deploy-docs:
     runs-on: ubuntu-latest
       #if: ${{ github.event.workflow_run.conclusion == 'success' }}
@@ -29,6 +25,40 @@ jobs:
         shell: bash -l {0}
 
     steps:
+      - uses: actions/checkout@v2
+
+# Setup conda 
+      - name: Set up conda
+        uses: conda-incubator/setup-miniconda@v2
+        with:
+          miniforge-variant: Mambaforge
+          miniforge-version: latest
+          activate-environment: saltproc-env
+          use-mamba: true
+          use-only-tar-bz2: true
+      - run: |
+          conda config --env --set pip_interop_enabled True
+
+# check for existing cache
+      - name: Set cache date
+        run: echo "DATE=$(date +'%Y%m%d')" >> $GITHUB_ENV
+
+      - uses: actions/cache@v2
+        id: dependencies-cache
+        with:
+          path: |
+            /usr/share/miniconda3/envs/saltproc-env
+            ~/.cache/pip
+          key: ${{ runner.os }}-depcache-$${ hashFiles('environment.yml')-${{ env.DATE }}-${{ env.CACHE_NUMBER }} }
+
+# Install dependencies
+      - name: Update environment
+        run: mamba env update -n saltproc-env -f environment.yml
+        if: steps.dependencies-cache.outputs.cache-hit != 'true'
+
+      - name: Install SaltProc
+        run:  python setup.py install
+
       - name: Build Sphinx Documentation
         run: |
           cd doc
