add step to print list of packages

--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -6,12 +6,6 @@ on:
     branches:
       - ci-testing
      # - master 
-  #workflow_run:
-  #workflows: "Test SaltProc"
-  #branches: [master]
-  #types:
-  #  - completed
-
 
 env:
   CACHE_NUMBER: 0 #change to manually reset cache
@@ -58,6 +52,9 @@ jobs:
 
       - name: Install SaltProc
         run:  python setup.py install
+
+      - name: Check packages
+        run: conda list
 
       - name: Build Sphinx Documentation
         run: |
