--- a/.github/workflows/test-saltproc.yml
+++ b/.github/workflows/test-saltproc.yml
@@ -6,7 +6,7 @@ on:
   pull_request:
   workflow_dispatch:
   workflow_run:
-    workflows: ["Cache Dependencies"]
+    workflows: ["Cache dependencies"]
     types: [completed]
 
 env:
