only deploy docs when the source code and doc pages have actually changed

--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -5,6 +5,9 @@ on:
   push:
     branches:
       - master 
+    paths:
+      - 'doc/**'
+      - 'saltproc/**'
 
 env:
   CACHE_NUMBER: 0 #change to manually reset cache
