--- a/.github/workflows/test-saltproc.yml
+++ b/.github/workflows/test-saltproc.yml
@@ -52,7 +52,7 @@ jobs:
         if: steps.dependencies-cache.outputs.cache-hit != 'true'
 
       - name: Install SaltProc
-        run:  python setup.py install
+        run:  pip install .
 
       - name: Test SaltProc
         run: pytest --ignore saltproc/tests/integration_tests saltproc
