--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -53,7 +53,7 @@ jobs:
         if: steps.dependencies-cache.outputs.cache-hit != 'true'
 
       - name: Install SaltProc
-        run:  python setup.py install
+        run:  pip install .
 
       - name: Check packages
         run: conda list
