--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -8,5 +8,11 @@ build:
 conda:
   environment: environment.yml
 
+python:
+  install:
+    - method: pip
+      path: .
+
 sphinx:
+  configuration: docs/conf.py
   fail_on_warning: true
