--- a/doc/doc-environment.yml
+++ b/doc/doc-environment.yml
@@ -10,10 +10,6 @@ dependencies:
   - pydotplus
   - pytest
   - sphinx
-  - sphinx-intl
   - sphinx_rtd_theme
-  - gitpython
-  - rsync
   - pip:
-      - pystemmer
-      - rinohtype
+      - sphinxcontrib-versioning
