--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -67,4 +67,4 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./doc/_build/html
-          commmit_message: update docs: ${{ github.event.head_commit.message }}
+          commit_message: update docs at commit ${{ github.event.head_commit.message }}
