add path specifier for push trigger in test-saltproc workflow

--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -7,9 +7,9 @@ on:
   push:
     #branches:
     #  - master 
-    paths:
-      - 'doc/**'
-      - 'saltproc/**'
+    #paths:
+    #  - 'doc/**'
+    #  - 'saltproc/**'
   # enable worflow to be run manually
   workflow_dispatch:
 
