--- a/.github/workflows/test-saltproc.yml
+++ b/.github/workflows/test-saltproc.yml
@@ -3,6 +3,9 @@ name: Test SaltProc
 
 on:
   push:
+    paths:
+      - 'saltproc/**'
+      - 'saltproc/tests/**'
   pull_request:
   workflow_dispatch:
   workflow_run:
