use sphinxcontrib_apidoc instead of the prerelease package

--- a/doc/doc-environment.yml
+++ b/doc/doc-environment.yml
@@ -12,4 +12,5 @@ dependencies:
   - sphinx
   - sphinx_rtd_theme
   - pip:
-      - sphinx-multiversion-pre-post-build
+      - sphinx-multiversion
+      - sphinxcontrib-apidoc
