--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -66,5 +66,5 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./doc/_build/html/*
+          publish_dir: ./doc/_build/html
           commit_message: update docs at commit ${{ github.event.head_commit.message }}
