try using fetch-depth 0 w/ checkout action so we can build versioned ocs

--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -26,6 +26,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+        with:
+            fetch-depth: 0
 
 # Setup conda 
       - name: Set up conda
