--- a/.github/workflows/test-saltproc.yml
+++ b/.github/workflows/test-saltproc.yml
@@ -7,10 +7,11 @@ on:
       - 'saltproc/**'
       - 'saltproc/tests/**'
   pull_request:
-  workflow_dispatch:
   workflow_run:
     workflows: ["Cache dependencies"]
     types: [completed]
+  # enable worflow to be run manually
+  workflow_dispatch:
 
 env:
   CACHE_NUMBER: 0 #change to manually reset cache
