--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -3,13 +3,13 @@ name: Deploy SaltProc docs
 
 on:
   release:
-      type: [published]
+    type: [published]
   push:
-    #branches:
-    #  - master 
-    #paths:
-    #  - 'doc/**'
-    #  - 'saltproc/**'
+    branches:
+      - master 
+    paths:
+      - 'doc/**'
+      - 'saltproc/**'
   # enable worflow to be run manually
   workflow_dispatch:
 
