--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -62,7 +62,9 @@ jobs:
         run: conda list
 
       - name: Build Sphinx Documentation
-        run: sphinx-multiversion doc doc/_build/html
+        run: |
+            sphinx-multiversion doc doc/_build/html
+            cp doc/redirect.html doc/_build/html/index.html
 
       - name: Deploy documentation to gh-pages branch
         uses: peaceiris/actions-gh-pages@v3
