--- a/.github/workflows/populate-releasenotes.yml
+++ b/.github/workflows/populate-releasenotes.yml
@@ -5,10 +5,10 @@ on:
   release:
     type: [created, edited, published]
   push:
-    branches:
-      - master 
-    paths:
-      - 'doc/releasenotes/**'
+  #  branches:
+  #    - master 
+  #  paths:
+  #    - 'doc/releasenotes/**'
   # enable worflow to be run manually
   workflow_dispatch:
 
@@ -31,4 +31,15 @@ jobs:
       - name: Convert .rst to .md 
         run: pandoc -s -o RELEASENOTES.md doc/releasenodes/{$RELEASE_VERISON}.rst
 
+      - name: Get release data in an environment variable
+        run: DESCRIPTION="$(cat RELEASENOTES.md)" 
+
       - name: Populate the release description with RELEASENOTES.md
+        run:
+          curl --request PATCH \
+          --url https://api.github.com/repos/${{ github.repository }}/releases/tags/v0.4.0 \
+        --header 'Accept: application/vnd.github.v3+json' \
+        --header 'Authorization: token ${{ secrets.GITHUB_TOKEN }}' \
+        --header 'content-type: application/json' \
+        --data '{body:${{ DESCRIPTION }}}'
+
