--- a/.github/workflows/populate-releasenotes.yml
+++ b/.github/workflows/populate-releasenotes.yml
@@ -46,5 +46,5 @@ jobs:
           gh api repos/${{ github.repository }}/releases/tags/$RELEASE_VERSION \
         -X PATCH -H 'Accept: application/vnd.github.v3+json' \
         -H 'Authorization: token ${{ secrets.GITHUB_TOKEN }}' \
-        --data '{"body":"$DESCRIPTION"}'
+        -F body="${DESCRIPTION}"
 
