--- a/.github/workflows/populate-releasenotes.yml
+++ b/.github/workflows/populate-releasenotes.yml
@@ -29,7 +29,7 @@ jobs:
         run: pip install pandoc
 
       - name: auth gh
-        run: gh auth login --with-token ${{ secrets.GITHUB_TOKEN }}
+        run: gh auth login --with-token process.env.GITHUB_TOKEN
 
       - name: Get most recent release version
         run: RELEASE_VERSION="$(gh api repos/${{ github.repository }}/releases/ | jq '[.0] | .tag_name')"
