typo fix for jq

--- a/.github/workflows/populate-releasenotes.yml
+++ b/.github/workflows/populate-releasenotes.yml
@@ -29,7 +29,7 @@ jobs:
         run: pip install pandoc
 
       - name: Get most recent release version
-        run: RELEASE_VERSION="$(gh api repos/${{ github.repository }}/releases/ | jq '.[0] | .tag_name')"
+        run: RELEASE_VERSION="$(gh api repos/${{ github.repository }}/releases --jq '.[0] | .tag_name')"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
