typo fix for pandoc

--- a/.github/workflows/populate-releasenotes.yml
+++ b/.github/workflows/populate-releasenotes.yml
@@ -34,7 +34,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Convert .rst to .md 
-        run: pandoc -s -o RELEASENOTES.md doc/releasenotes/${RELEASE_VERISON}.rst
+        run: pandoc -s -o RELEASENOTES.md doc/releasenotes/$RELEASE_VERISON.rst
 
       - name: Get release data in an environment variable
         run: DESCRIPTION="$(cat RELEASENOTES.md)" 
