--- a/.github/workflows/populate-releasenotes.yml
+++ b/.github/workflows/populate-releasenotes.yml
@@ -21,12 +21,23 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
+
+      - name: Set up conda
+        uses: conda-incubator/setup-miniconda@v2
         with:
-          python-version: '3.9'
+          miniforge-variant: Mambaforge # mamba is faster than base conda
+          miniforge-version: latest
+          activate-environment: saltproc-doc-env
+          use-mamba: true
+          use-only-tar-bz2: true
+      - run: |
+          conda config --env --set pip_interop_enabled True
+
 
       - name: install pandoc 
-        run: pip install pandoc
+        run: |
+          mamba install -c conda-forge pandoc
+          pip install --upgrade pandoc
 
       - name: Get most recent release version
         run: RELEASE_VERSION="$(gh api repos/${{ github.repository }}/releases --jq '.[0] | .tag_name')"
