try making RELEASE_VERSION an environment variable

--- a/.github/workflows/populate-releasenotes.yml
+++ b/.github/workflows/populate-releasenotes.yml
@@ -12,6 +12,9 @@ on:
   # enable worflow to be run manually
   workflow_dispatch:
 
+env:
+  RELEASE_VERSION: ''
+
 jobs:
   deploy-docs:
     runs-on: ubuntu-latest
@@ -40,12 +43,12 @@ jobs:
           pip install --upgrade pandoc
 
       - name: Get most recent release version
-        run: RELEASE_VERSION="$(gh api repos/${{ github.repository }}/releases --jq '.[0] | .tag_name')"
+        run: ${{ env.RELEASE_VERSION }}="$(gh api repos/${{ github.repository }}/releases --jq '.[0] | .tag_name')"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Convert .rst to .md 
-        run: pandoc -s -o RELEASENOTES.md doc/releasenotes/$RELEASE_VERISON.rst
+        run: pandoc -s -o RELEASENOTES.md doc/releasenotes/${{ env.RELEASE_VERISON }}.rst
 
       - name: Get release data in an environment variable
         run: DESCRIPTION="$(cat RELEASENOTES.md)" 
